<resources>
    <string name="app_name">Assistance</string>
    <string name="action_back_button_pressed_once">Please press back button again to exit</string>
    <string name="user_faq_url">https://kraken.me/#/idee</string>
    <string name="user_feedback_url">mailto:developer@tk.informatik.tu-darmstadt.de</string>
    <string name="user_feedback_subject">Assistance App Feedback</string>
    <string name="user_feedback_body">Hi,\n\n</string>
    <string name="button_accept">ACCEPT</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">cancel</string>
    <string name="button_back_text">back</string>
    <string name="button_disable">Disable</string>
    <string name="button_ignore_text">ignore</string>
    <string name="button_next_text">next</string>
    <string name="background">Background</string>
    <string name="none">none</string>
    <string name="feature_is_under_construction">This feature is under construction!</string>
    <string name="no_data">no data</string>
    <string name="permission_is_crucial">These permissions are crucial for this module</string>
    <string name="changes_were_saved">Changes were saved.</string>
    <string name="password">Password</string>
    <string name="title_activity_accessibility_tutorial">Extended Accessibility Service Tutorial</string>
    <string name="settings_module_allowed_capability_title">Module capability permissions</string>
    <string name="settings_module_allowed_capability_summary">Globally turn on/off module capability permissions</string>
    <plurals name="settings_module_allowed_capability_required_by_modules">
        <item quantity="one">Required by %1$d module</item>
        <item quantity="other">Required by %1$d modules</item>
    </plurals>
    <string name="settings_module_allowed_capability_disable_header">Are you sure?</string>
    <string name="settings_module_allowed_capability_disable_message2">This capability os required by another module!</string>
    <plurals name="settings_module_allowed_capability_disable_message">
        <item quantity="one">This capability is required for %1$d module</item>
        <item quantity="other">This capability is required for %1$d modules</item>
    </plurals>
    <string name="settings_activity_title">Settings</string>
    <string name="settings_header_application_title">App settings</string>
    <string name="settings_header_application_summary">General App tweaks</string>
    <string name="settings_header_user_profile_title">Profile</string>
    <string name="settings_header_user_profile_summary">Edit your profile</string>
    <string name="settings_header_user_device_title">Your device</string>
    <string name="settings_header_user_device_summary">Mobile device information</string>
    <string name="settings_header_development_title">Development</string>
    <string name="settings_header_development_summary">Development settings</string>
    <string name="settings_header_help_and_about_title">Help and legal information</string>
    <string name="settings_header_help_and_about_summary">About</string>
    <string name="settings_header_logout_title">Log out</string>
    <string name="settings_header_logout_summary">Switch to another account</string>
    <string name="settings_list_of_sensors_title">List of sensors</string>
    <string name="settings_list_of_sensors_summary">All available sensors on your device</string>
    <string name="settings_device_name_title">Set device name</string>
    <string name="settings_device_name_summary">Name your device as you want it!</string>
    <string name="settings_be_developer_title">Developer</string>
    <string name="settings_be_developer_summary">I am generous god!</string>
    <string name="settings_export_database">Export database</string>
    <string name="settings_export_database_summary">Export application sqlite database to downloads directory</string>
    <string name="settings_export_database_successful">Export was successful!</string>
    <string name="settings_export_database_failed">Export has failed!</string>
    <string name="settings_edit_endpoint_url">Current endpoint:</string>
    <string name="settings_edit_endpoint_url_summary">All requests of an App will be transmitted to this address</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_summary">About the app and its licenses</string>
    <string name="settings_faq_title">FAQ</string>
    <string name="settings_faq_summary">Collection of helpful hints</string>
    <string name="settings_feedback_title">Send us a feedback</string>
    <string name="settings_feedback_summary">Please tell us about your experience with the app</string>
    <string name="settings_legal_title">Terms of Service</string>
    <string name="settings_legal_summary">You accepting these by using this app</string>
    <string name="settings_app_version">Version</string>
    <string name="settings_app_version_summary">1.0</string>
    <string name="settings_build_version">Build</string>
    <string name="settings_build_version_summary">0001</string>
    <string name="settings_build_press_some_more">You pressed it %1$d</string>
    <string name="settings_build_press_now_you_developer">Now you are a developer!</string>
    <string name="settings_build_press_already_developer">You are already a developer.</string>
    <string name="settings_about_dialog_intro">Assitance App is a multi-device, multi-sensor tracking suite. It collects data from physical and logical sensors across desktop, mobile, and social. The ultimate goal is unobtrusive assistance to the user. To provide assistance and guidance, we want to learn as much as possible about human behavior and human intention.</string>
    <string name="settings_about_dialog_header_developers">DEVELOPERS</string>
    <string name="settings_about_dialog_developer_name_1">Wladimir Schmidt</string>
    <string name="settings_about_dialog_developer_email_1">- <a href="mailto:wlsc.dev@gmail.com">Email</a></string>
    <string name="settings_about_dialog_developer_website_1">- <a href="http://blog.wlsc.de/">Website</a></string>
    <string name="settings_about_dialog_tk_lab_footer">2015 © <a href="http://www.tk.informatik.tu-darmstadt.de">Telecooperation Lab</a></string>
    <string name="splash_logo_description">Assistance Logo</string>
    <string name="login_header">Welcome!</string>
    <string name="login_prompt_email">Email</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_action_sign_in">Log in</string>
    <string name="register_header">Registration</string>
    <string name="register_action_sign_up">Sign up</string>
    <string name="register_email">Email</string>
    <string name="register_password1">Password</string>
    <string name="register_password2">Repeat password</string>
    <string name="register_disclaimer_text"><a href="#">I agree to Terms of Service</a></string>
    <string name="reset_header">Reset your password</string>
    <string name="reset_email">Email</string>
    <string name="reset_action_reset_password">Reset it</string>
    <string name="module_action_activate">Activate</string>
    <string name="module_action_deactivate">Deactivate</string>
    <string name="module_action_more_info">Info</string>
</resources>