<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Application -->
    <header
        android:id="@+id/application_settings"
        android:fragment="de.tu_darmstadt.tk.android.assistance.fragments.settings.ApplicationSettingsFragment"
        android:icon="@drawable/ic_settings_applications_black_48dp"
        android:summary="@string/settings_header_application_summary"
        android:title="@string/settings_header_application_title" />

    <!-- User Profile -->
    <header
        android:id="@+id/user_settings"
        android:fragment="de.tu_darmstadt.tk.android.assistance.fragments.settings.UserProfileSettingsFragment"
        android:icon="@drawable/ic_account_box_black_48dp"
        android:summary="@string/settings_header_user_profile_summary"
        android:title="@string/settings_header_user_profile_title" />

    <!-- Device Information -->
    <header
        android:id="@+id/about_settings"
        android:fragment="de.tu_darmstadt.tk.android.assistance.fragments.settings.UserDeviceInfoSettingsFragment"
        android:icon="@drawable/ic_perm_device_information_black_48dp"
        android:summary="@string/settings_header_user_device_summary"
        android:title="@string/settings_header_user_device_title" />

    <!-- Data Usage -->
    <!--<header
        android:id="@+id/data_usage_settings"
        android:fragment="de.tu_darmstadt.tk.android.assistance.fragments.DataUsageSummary"
        android:title="@string/data_usage_summary_title"
        android:icon="@drawable/ic_settings_data_usage" />-->

    <!-- Backup and reset -->
    <!--<header
        android:fragment="de.tu_darmstadt.tk.android.assistance.fragments.PrivacySettings"
        android:icon="@drawable/ic_settings_backup"
        android:title="@string/privacy_settings_title"
        android:id="@+id/privacy_settings" />-->

    <!-- Development -->
    <header
        android:id="@+id/development_settings"
        android:fragment="de.tu_darmstadt.tk.android.assistance.fragments.settings.DevelopmentSettingsFragment"
        android:icon="@drawable/ic_developer_mode_black_48dp"
        android:summary="@string/settings_header_development_summary"
        android:title="@string/settings_header_development_title" />

    <!-- About Application and Licenses -->
    <header
        android:id="@+id/about_settings"
        android:fragment="de.tu_darmstadt.tk.android.assistance.fragments.settings.ApplicationAboutSettingsFragment"
        android:icon="@drawable/ic_info_outline_black_48dp"
        android:summary="@string/settings_header_about_summary"
        android:title="@string/settings_header_about_title" />

    <!-- Log out of user -->
    <header
        android:id="@+id/logout_settings"
        android:icon="@drawable/ic_exit_to_app_black_48dp"
        android:summary="@string/settings_header_logout_summary"
        android:title="@string/settings_header_logout_title" />

</preference-headers>