<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AlertDialog.AppCompat.Light"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/alertDialogBackground"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding_material"
    android:paddingTop="@dimen/dialog_padding_top_material">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/settings_about_dialog_intro"
            android:textColor="@color/textBase"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/settings_about_dialog_header_developers"
            android:textColor="@color/textBase"
            android:textSize="22sp" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_dialog_developer_name_1"
                android:textColor="@color/textBase"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/settings_about_dialog_developer_email_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_dialog_developer_email_1"
                android:textColor="@color/textBase"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/settings_about_dialog_developer_website_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_dialog_developer_website_1"
                android:textColor="@color/textBase"
                android:textIsSelectable="true"
                android:textSize="16sp" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/settings_about_dialog_tk_lab_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/settings_about_dialog_tk_lab_footer"
            android:textColor="@color/textBase"
            android:textIsSelectable="true"
            android:textSize="16sp" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>