<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_form_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/register_header"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:textColorHint="@color/loginHeader"
            android:textSize="@dimen/abc_text_size_headline_material" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress"
                android:paddingTop="20dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password1"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password2"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/disclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:checked="false" />

            <TextView
                android:id="@+id/disclaimerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/register_disclaimer_text" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            style="@style/BtnSuccess"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:enabled="true"
            android:text="@string/register_action_sign_up"
            android:textAllCaps="true"
            android:textStyle="bold" />

    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>