<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/reset_header"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:textColorHint="@color/loginHeader"
            android:textSize="@dimen/abc_text_size_headline_material" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/reset_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reset_email"
                android:inputType="textEmailAddress"
                android:paddingTop="20dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/reset_button"
            style="@style/BtnSuccess"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:enabled="true"
            android:text="@string/reset_action_reset_password"
            android:textAllCaps="true"
            android:textStyle="bold" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>