<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/card_margin"
    android:minHeight="100dp"
    card_view:cardCornerRadius="8dp">

    <android.support.v7.widget.LinearLayoutCompat
        style="@style/Widget.CardContent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/main_short_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/textBase" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/more_info_module"
                style="@style/Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/module_action_more_info"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/install_module"
                style="@style/BtnSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/module_action_activate"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/uninstall_module"
                style="@style/BtnDanger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:padding="10dp"
                android:text="@string/module_action_deactivate"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:visibility="gone" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.CardView>